# ucd3-firmware

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE-OF-CONDUCT.md  CONTRIBUTING.md  CheckGit.cmake  README.md  code_style.sh  frogfs.yaml  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.rev3
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  code_guidelines.yml
components/adc/: CMakeLists.txt  adc_channel.cpp  adc_channel.h  adc_reader.h  adc_unit.cpp  adc_unit.h
components/ble/: ble_log_util.c  ble_log_util.h  misc.c  misc.h
components/common/: CMakeLists.txt  mem_util.c  mem_util.h  string_util.cpp  string_util.h
components/display/: CMakeLists.txt  DisplaySm.drawio  DisplaySm.sim.html  Kconfig.projbuild  generate-sm.sh
components/display/include/: display.h
components/display/src/: DisplayDriver.cpp  DisplayDriver.h  DisplaySm.cpp  DisplaySm.h  DisplaySmBase.cpp  DisplaySmBase.h  (+19 more)
components/external_port/: CMakeLists.txt  external_port.cpp  external_port.h
components/improv_wifi/: improv.c  improv.h
components/infrared/: CMakeLists.txt  globalcache.cpp  globalcache.h  globalcache_server.cpp  globalcache_server.h  ir_codes.cpp  ir_codes.h  service_ir.cpp  service_ir.h  util_types.h
components/led/: Kconfig.projbuild  led_pattern.c  led_pattern.h  led_pattern_gpio.c  led_pattern_rgb.c  led_pattern_strip.c
components/network/: CMakeLists.txt  Kconfig.projbuild  NetworkSm.drawio  NetworkSm.sim.html  generate-sm.sh
components/network/include/: network.h
components/network/src/: NetworkSm.cpp  NetworkSm.h  NetworkSmBase.cpp  NetworkSmBase.h  network.cpp  network_ethernet.c  network_ethernet.h  network_priv.h  network_wifi.cpp  network_wifi.h  wifi_prov_cfg.cpp  wifi_prov_cfg.h  wifi_provisioning.c  wifi_provisioning.h
components/preferences/: CMakeLists.txt  Kconfig.projbuild  board.h  board_r3.h  board_r4.h  config.cpp  config.h  efuse.cpp  efuse.h  efuse_user.c  efuse_user.csv  efuse_user.h  ext_port_mode.c  ext_port_mode.h  net_config.h  preferences.cpp  preferences.h  uart_config.cpp  uart_config.h  uc_errors.h  uc_events.c  uc_events.h
components/webserver/: CMakeLists.txt  Kconfig.projbuild  WebServer.cpp  WebServer.h
doc/: code-guidelines.md  dev-setup.md  efuse.md  improv-wifi.md  itach-emulation.md  ota.md  websocket-api.md
doc/licenses/: README.md  licenses.json  transform-licenses.js
doc/release/: README.md  release-notes_de.md  release-notes_en.md
main/: CMakeLists.txt  Kconfig.projbuild  button.cpp  button.h  charger.cpp  charger.h  git_version.cpp.in  git_version.h  idf_component.yml  main.cpp  ota.cpp  ota.h  ucd_api.cpp  ucd_api.h
partition_table/: partitions.csv
patches/idf-v5.3.1/: 001-lcd-ic2-timeout.diff
patches/idf-v5.4.1/: 001-lcd-ic2-timeout.diff
test/: CMakeLists.txt  README.md
test/common/: CMakeLists.txt  test_string_util.cpp
test/improv_wifi/: CMakeLists.txt  test_improv.cpp
test/infrared/: CMakeLists.txt  test_globalcache.cpp  test_ir_codes.cpp
test/mocks/: IRremoteESP8266.h  esp_bit_defs.h  esp_log.c  esp_log.h  sdkconfig.h
test/mocks/driver/: uart.h  uart_types.h
test/mocks/soc/: gpio_num.h
test/preferences/: CMakeLists.txt  test_UartConfig.cpp
tools/: README.md  git-version.sh
tools/git-semver/: README.md
tools/ir_repeat/: package-lock.json  package.json  repeat.js
tools/ir_torture/: index.js  package-lock.json  package.json
tools/ota/: README.md  create-ota-firmware-meta.js  create-ota-hawkbit-meta.js  create_ota_update.sh  upload-ota.sh
webroot/: index.html  ucd.css
webroot/update/: index.html
(+2 files in other folders)
