idf_component_register(
    SRCS
    "config.cpp"
    "efuse.cpp"
    "efuse_user.c"
    "ext_port_mode.c"
    "preferences.cpp"
    "uart_config.cpp"
    "uc_events.c"
    INCLUDE_DIRS
    "."
    REQUIRES
    esp_driver_gpio
    esp_driver_uart
    esp_event
    esp_netif
    efuse
    nvs_flash
    log
)
